fix spacing

--- a/webui/src/assets/dashboard.css
+++ b/webui/src/assets/dashboard.css
@@ -92,7 +92,6 @@
     z-index: 10;
     width: 90%;
     padding-top: 15px;
-    padding-left: 8px;
     padding-bottom: 30px;
     background-color: var(--color-background);
 }
